2004-03-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkgc-win32.c (gdk_gc_copy): Don't just copy the whole
	GdkGCWin32 with a single assignment, that overwrites GObject's
	private data (for instance ref_count). (#137012, John Ehresman)

2004-03-13  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdrawable-win32.c (draw_polygon): When drawing
	filled polygons, don't draw the outline, similar behaviour
	as draw_rectangle(). Apparently GTK and GIMP don't use
	gdk_draw_polygon() much (or always draw the outline, too), as this
	has gone undetected for so long. Thanks to Bruce Hochstetler.

2004-03-10  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (build_key_event_state): Set also
	the pointer button bits. (#136636, Dave Neary)

2004-02-02  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkwindow-win32.c (show_window_internal): Show
	transparent (input only) windows using SetWindowPos(). (#132331,
	John Ehresman)

	(gdk_window_set_type_hint): For splash screens, remove the resize
	handles, menu, and minimize/maximize/close buttons. (#132896)

2004-02-02  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (gdk_pointer_grab): Set the cursor
	in all cases. If no grab cursor specified, use the grabbing
	window's cursor. If the grabbing window has no cursor, use the
	default arrow cursor. (#118025)

Sat Jan 31 22:43:49 2004  Matthias Clasen  <maclas@gmx.de>

	Merge from HEAD:
	
	* gtk/gtktextchild.c (gtk_text_child_anchor_finalize): Don't
	crash when finalizing an unused GtkTextChildAnchor.  (#132260,
	muppet)

	* gtk/gtktreemodel.c (gtk_tree_model_rows_reordered): Correct
	the documentation for new_order.  (#124790, Tim-Philipp Müller)

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_fixed_width): 
	Reset use_resized_width when setting fixed_width.  (#108612, 
	Felipe Heidrich) 

	* gtk/gtkmain.c (gtk_key_snooper_remove): Don't leak the
	GtkKeySnooperData.  (#132038, R. McFarland)
	
2004-01-30  Not Zed  <NotZed@Ximian.com>

	Fixes #132929.
