@@ -1,3 +1,8 @@
+2004-03-31  Tor Lillqvist  <tml@iki.fi>
+
+	* gdk/win32/gdkdrawable-win32.c (draw_arc): Use X11 semantics for
+	angles. Thanks to Tim Newsham.
+
 2004-03-15  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkgc-win32.c (gdk_gc_copy): Don't just copy the whole
